# cmake_practice

t1/: CMakeLists.txt
t2/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c  hello.h
t4/lib/: libhello.so.1.2
t4/src/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHELLO.cmake
t6/src/: CMakeLists.txt
