CMAKE_POLICY(SET CMP0015 NEW)

SET(HELLO_LIB_PATH "../lib")
SET(HELLO_INCLUDE_PATH "../include")
INCLUDE_DIRECTORIES(${HELLO_INCLUDE_PATH}) 
MESSAGE(STATUS ${CMAKE_CURRENT_SOURCE_DIR})

#FIND_LIBRARY(HELLO_LIB NAMES hello PATHS "../lib")
#TARGET_LINK_LIBRARIES(main ${HELLO_LIB})

LINK_DIRECTORIES(${HELLO_LIB_PATH})
ADD_EXECUTABLE(main main.c)
TARGET_LINK_LIBRARIES(main hello)
